Resolve #18, use scrollbar if search-form is overflow

--- a/app/assets/stylesheets/pages/courses.scss
+++ b/app/assets/stylesheets/pages/courses.scss
@@ -14,6 +14,9 @@
   width: 45%;
   margin-top: 30px;
   .jumbotron {
+    overflow-y: auto;
+    max-height: 70vh;
+    height: 100%;
     padding-right: 20px;
     padding-left: 20px;
     opacity: 0.75;
@@ -24,6 +27,7 @@
       box-shadow: 0 5px 15px 3px lightgray;
     }
     @include breakpoint(tablet) {
+      max-height: none;
       opacity: 1;
       box-shadow: 0 5px 15px 3px lightgray;
     }
